--- a/scss/_reboot.scss
+++ b/scss/_reboot.scss
@@ -23,7 +23,9 @@
 *::after {
   box-sizing: border-box; // 1
 }
-
+.do {
+  height: 33px;
+}
 html {
   font-family: sans-serif; // 2
   line-height: 1.15; // 3
